Big updates to rendering and input handling